Fix h1 spacing

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ h1 {
 	text-align: center;
 	width: 100%;
 	top: 50%;
-	transform: translateY(-265%);
+	transform: translateY(-130%);
 	text-shadow: 0px 0px 20px rgba(255,255,255,0.1);
 	-webkit-background-clip: text;
 	   -moz-background-clip: text;
